Gap styling bug fixed.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -29,7 +29,8 @@
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
-	gap: 1rem;
+	column-gap: 1rem;
+	row-gap: .4rem;
 }
 
 img {
